dev/api-ds.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eshop-publicapi
  namespace: dev
spec:
  replicas: 2
  selector:
    matchLabels:
      app: eshop-publicapi
  template:
    metadata:
      labels:
        app: eshop-publicapi
    spec:
      containers:
        - name: eshop-publicapi
          image: adarshjain428/eshoppublicapi:1.0
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: eshop-publicapi
  namespace: dev
spec:
  selector:
    app: eshop-publicapi
  ports:
    - port: 80
      targetPort: 80
