dev/web-ds.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eshop-web
  namespace: dev
spec:
  replicas: 2
  selector:
    matchLabels:
      app: eshop-web
  template:
    metadata:
      labels:
        app: eshop-web
    spec:
      containers:
        - name: eshop-web
          image: adarshjain428/eshopwebmvc:1.0
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: eshop-web
  namespace: dev
spec:
  selector:
    app: eshop-web
  ports:
    - port: 80
      targetPort: 80
