dev/istio-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: eshop
  namespace: dev
spec:
  hosts:
    - "*"
  gateways:
    - eshop-gateway
  http:
    - match:
        - uri:
            prefix: /api
      route:
        - destination:
            host: eshop-publicapi
            port:
              number: 80
    - route:
        - destination:
            host: eshop-web
            port:
              number: 80
